--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
+    "react-pin-field": "^4.0.2",
     "react-redux": "^9.2.0",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
